--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/x-danma/execute-powershell-example-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.3"
   }
 }
