--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "typescript": "^4.8.4",
-    "@types/node": "^18.11.3"
+    "typescript": "^4.8.4"
   }
 }
