remove src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "noUnusedLocals": true
     },
     "include": [
-      "src/index.ts"
+      "index.ts"
     ],
     "typeAcquisition": {
       "enable": true
