copy code from increment tag action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,22 @@
 on: [push]
 
 jobs:
-  powerShell_echo:
+  autoBump_tag:
     runs-on: ubuntu-latest
-    name: A job to say echo in Powershell
+    name: A job to increment tag
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Echo Powershell action step
+      - name: Increment SemVer Patch Version and Tag
         uses: ./ # Uses an action in the root directory
-        id: echoPowerShell
-      # Use the output from the `hello` step
-      - name: Get the output echo
-        run: echo "The echo was ${{ steps.hello.echoPowerShell.outputs.returnEcho }}"
+        id: createTag
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repositoryName: ${{ github.event.repository.name }}
+          sha: ${{ github.sha }}
+          repositoryOwner: ${{ github.repository_owner }}
+      # Use the output from the `createTag` step
+      - name: Get the output tag
+        run: echo "The tag was ${{ steps.createTag.outputs.newTag }}"
