--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "execute-powershell-example-action",
+  "name": "hello-world-javascript-action",
   "version": "1.0.0",
-  "description": "An example github action to execute a powershell script contained in repo",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build index.js --license licenses.txt",
+    "build": "ncc build index.ts --license licenses.txt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/x-danma/execute-powershell-example-action.git"
+    "url": "git+https://github.com/x-danma/hello-world-javascript-action.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/x-danma/execute-powershell-example-action/issues"
+    "url": "https://github.com/x-danma/hello-world-javascript-action/issues"
   },
-  "homepage": "https://github.com/x-danma/execute-powershell-example-action#readme",
+  "homepage": "https://github.com/x-danma/hello-world-javascript-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "@octokit/rest": "^19.0.5",
+    "typescript": "^4.8.4"
   }
 }
